flowise/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: flowise
  name: flowise
  namespace: flowise
spec:
  replicas: 1
  selector:
    matchLabels:
      service: flowise
  template:
    metadata:
      labels:
        service: flowise
    spec:
      containers:
        - name: flowise
          image: flowiseai/flowise:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "200Mi"
              cpu: "25m"
            limits:
              # High memory needed to handle large files
              memory: "4Gi"
              cpu: "2"
          volumeMounts:
            - name: flowise-data
              mountPath: /root/.flowise
      volumes:
        - name: flowise-data
          persistentVolumeClaim:
            claimName: flowise-pvc
