flowise/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: flowise
  name: flowise
  namespace: flowise
spec:
  ports:
    - name: "ui"
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    service: flowise
